--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "engines": {
     "node": ">=0.12.0",
     "homebridge": ">=0.2.0"
+  },
+  "dependencies": {
+    "node-persist": "^2.1.0"
   }
 }
