--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "homebridge-dummy-outlet",
+  "name": "homebridge-dummy-accessory",
   "version": "0.6.0",
-  "description": "Dummy outlets for Homebridge: https://github.com/nfarina/homebridge",
+  "description": "Dummy accessory for Homebridge: https://github.com/nfarina/homebridge",
   "license": "ISC",
   "keywords": [
     "homebridge-plugin"
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/ptysell/homebridge-dummy-outlet.git"
+    "url": "git://github.com/ptysell/homebridge-dummy-accessory.git"
   },
   "bugs": {
-    "url": "http://github.com/ptysell/homebridge-dummy-outlet/issues"
+    "url": "http://github.com/ptysell/homebridge-dummy-accessory/issues"
   },
   "engines": {
     "node": ">=0.12.0",
